// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewMessageView Item should match snapshot when hasMediaCallPermission is false 1`] = `
<View
  accessibilityLabel="John Doe"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  activeUnderlayOpacity={0.105}
  animationDuration={0}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
  testID="new-message-view-item-john.doe"
  underlayColor="#D7DBE0"
>
  <View
    style={
      [
        {
          "flexDirection": "row",
        },
        {
          "height": 54,
        },
      ]
    }
  >
    <View
      accessibilityLabel="john.doe's avatar"
      accessible={true}
      style={
        [
          {
            "borderRadius": 4,
            "height": 30,
            "width": 30,
          },
          {
            "marginHorizontal": 12,
            "marginVertical": 12,
          },
        ]
      }
      testID="avatar"
    >
      <ViewManagerAdapter_ExpoImage
        borderRadius={4}
        containerViewRef={{"current":"Object"}}
        contentFit="cover"
        contentPosition={
          {
            "left": "50%",
            "top": "50%",
          }
        }
        height={30}
        nativeViewRef={{"current":"NativeComponent"}}
        onError={[Function]}
        onLoad={[Function]}
        onLoadStart={[Function]}
        onProgress={[Function]}
        placeholder={[]}
        priority="high"
        sfEffect={null}
        source={
          [
            {
              "headers": {
                "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
              },
              "uri": "https://open.rocket.chat/avatar/john.doe?format=png&size=60",
            },
          ]
        }
        style={
          {
            "borderRadius": 4,
            "height": 30,
            "width": 30,
          }
        }
        symbolSize={null}
        symbolWeight={null}
        transition={null}
        width={30}
      />
    </View>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "marginRight": 12,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 18,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "500",
              "lineHeight": 26,
              "textAlign": "left",
            },
            {
              "color": "#2F343D",
            },
          ]
        }
      >
        John Doe
      </Text>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: Default should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "minHeight": 100,
      "padding": 24,
    }
  }
>
  <View
    accessibilityLabel="John Doe"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    activeUnderlayOpacity={0.105}
    animationDuration={0}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#FFFFFF",
      }
    }
    testID="new-message-view-item-john.doe"
    underlayColor="#D7DBE0"
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "height": 54,
          },
        ]
      }
    >
      <View
        accessibilityLabel="john.doe's avatar"
        accessible={true}
        style={
          [
            {
              "borderRadius": 4,
              "height": 30,
              "width": 30,
            },
            {
              "marginHorizontal": 12,
              "marginVertical": 12,
            },
          ]
        }
        testID="avatar"
      >
        <ViewManagerAdapter_ExpoImage
          borderRadius={4}
          containerViewRef={{"current":"Object"}}
          contentFit="cover"
          contentPosition={
            {
              "left": "50%",
              "top": "50%",
            }
          }
          height={30}
          nativeViewRef={{"current":"NativeComponent"}}
          onError={[Function]}
          onLoad={[Function]}
          onLoadStart={[Function]}
          onProgress={[Function]}
          placeholder={[]}
          priority="high"
          sfEffect={null}
          source={
            [
              {
                "headers": {
                  "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                },
                "uri": "https://open.rocket.chat/avatar/john.doe?format=png&size=60",
              },
            ]
          }
          style={
            {
              "borderRadius": 4,
              "height": 30,
              "width": 30,
            }
          }
          symbolSize={null}
          symbolWeight={null}
          transition={null}
          width={30}
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
            "marginRight": 12,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 18,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "500",
                "lineHeight": 26,
                "textAlign": "left",
              },
              {
                "color": "#2F343D",
              },
            ]
          }
        >
          John Doe
        </Text>
      </View>
      <View
        accessibilityLabel="Voice call"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        activeOpacity={0.3}
        animationDuration={0}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "center",
            "paddingHorizontal": 15,
          }
        }
        testID="new-message-view-item-john.doe-call"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#2F343D",
                "fontSize": 22,
              },
              [
                {
                  "lineHeight": 22,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: LongName should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "minHeight": 100,
      "padding": 24,
    }
  }
>
  <View
    accessibilityLabel="Very Long Display Name That Might Get Truncated"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    activeUnderlayOpacity={0.105}
    animationDuration={0}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#FFFFFF",
      }
    }
    testID="new-message-view-item-long.name"
    underlayColor="#D7DBE0"
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "height": 54,
          },
        ]
      }
    >
      <View
        accessibilityLabel="long.name's avatar"
        accessible={true}
        style={
          [
            {
              "borderRadius": 4,
              "height": 30,
              "width": 30,
            },
            {
              "marginHorizontal": 12,
              "marginVertical": 12,
            },
          ]
        }
        testID="avatar"
      >
        <ViewManagerAdapter_ExpoImage
          borderRadius={4}
          containerViewRef={{"current":"Object"}}
          contentFit="cover"
          contentPosition={
            {
              "left": "50%",
              "top": "50%",
            }
          }
          height={30}
          nativeViewRef={{"current":"NativeComponent"}}
          onError={[Function]}
          onLoad={[Function]}
          onLoadStart={[Function]}
          onProgress={[Function]}
          placeholder={[]}
          priority="high"
          sfEffect={null}
          source={
            [
              {
                "headers": {
                  "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                },
                "uri": "https://open.rocket.chat/avatar/long.name?format=png&size=60",
              },
            ]
          }
          style={
            {
              "borderRadius": 4,
              "height": 30,
              "width": 30,
            }
          }
          symbolSize={null}
          symbolWeight={null}
          transition={null}
          width={30}
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
            "marginRight": 12,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 18,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "500",
                "lineHeight": 26,
                "textAlign": "left",
              },
              {
                "color": "#2F343D",
              },
            ]
          }
        >
          Very Long Display Name That Might Get Truncated
        </Text>
      </View>
      <View
        accessibilityLabel="Voice call"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        activeOpacity={0.3}
        animationDuration={0}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "center",
            "paddingHorizontal": 15,
          }
        }
        testID="new-message-view-item-long.name-call"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#2F343D",
                "fontSize": 22,
              },
              [
                {
                  "lineHeight": 22,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: NoVoiceCallPermission should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "minHeight": 100,
      "padding": 24,
    }
  }
>
  <View
    accessibilityLabel="John Doe"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    activeUnderlayOpacity={0.105}
    animationDuration={0}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#FFFFFF",
      }
    }
    testID="new-message-view-item-john.doe"
    underlayColor="#D7DBE0"
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "height": 54,
          },
        ]
      }
    >
      <View
        accessibilityLabel="john.doe's avatar"
        accessible={true}
        style={
          [
            {
              "borderRadius": 4,
              "height": 30,
              "width": 30,
            },
            {
              "marginHorizontal": 12,
              "marginVertical": 12,
            },
          ]
        }
        testID="avatar"
      >
        <ViewManagerAdapter_ExpoImage
          borderRadius={4}
          containerViewRef={{"current":"Object"}}
          contentFit="cover"
          contentPosition={
            {
              "left": "50%",
              "top": "50%",
            }
          }
          height={30}
          nativeViewRef={{"current":"NativeComponent"}}
          onError={[Function]}
          onLoad={[Function]}
          onLoadStart={[Function]}
          onProgress={[Function]}
          placeholder={[]}
          priority="high"
          sfEffect={null}
          source={
            [
              {
                "headers": {
                  "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                },
                "uri": "https://open.rocket.chat/avatar/john.doe?format=png&size=60",
              },
            ]
          }
          style={
            {
              "borderRadius": 4,
              "height": 30,
              "width": 30,
            }
          }
          symbolSize={null}
          symbolWeight={null}
          transition={null}
          width={30}
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
            "marginRight": 12,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 18,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "500",
                "lineHeight": 26,
                "textAlign": "left",
              },
              {
                "color": "#2F343D",
              },
            ]
          }
        >
          John Doe
        </Text>
      </View>
      <View
        accessibilityLabel="Voice call"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        activeOpacity={0.3}
        animationDuration={0}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "center",
            "paddingHorizontal": 15,
          }
        }
        testID="new-message-view-item-john.doe-call"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#2F343D",
                "fontSize": 22,
              },
              [
                {
                  "lineHeight": 22,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;
